@@ -1,22 +1,15 @@
 {
-  "timestamp" : "2022-06-01T16:17:45Z",
-  "count_outdated" : 308,
-  "uniques_outdated" : 160,
+  "timestamp" : "2022-06-02T01:05:31Z",
+  "count_outdated" : 310,
+  "uniques_outdated" : 161,
   "count" : 336,
-  "uniques" : 181,
+  "uniques" : 180,
   "clones" : [
     {
-      "timestamp": "2022-05-18T00:00:00Z",
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
     },
     {
