@@ -1,16 +1,11 @@
 {
-  "count": 28,
-  "uniques": 13,
+  "count": 26,
+  "uniques": 12,
   "clones": [
     {
-      "timestamp": "2022-05-18T00:00:00Z",
+      "timestamp": "2022-05-19T00:00:00Z",
       "count": 1,
       "uniques": 1
-    },
-    {
-      "timestamp": "2022-05-19T00:00:00Z",
-      "count": 2,
-      "uniques": 2
     },
     {
       "timestamp": "2022-05-20T00:00:00Z",
