@@ -1,3 +1,10 @@
+2022-06-02T01:05:31Z:
+* notice: last 14d: unq all: 12 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 160 308 / 181 336
+* notice: next accum: outdated-unq outdated-all / unq all: 161 310 / 180 336
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [2022-05-18] / [2022-05-19]
+
 2022-06-01T16:17:45Z:
 * notice: last 14d: unq all: 13 28
 * notice: prev accum: outdated-unq outdated-all / unq all: 160 308 / 180 336
